# p2lab-pokemon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  hypotheses_pseudocode.md  ideal-api.md  pool.txt  pyproject.toml  run.py  target_api.md  timings.py
 examples/: POKE_STATS.md  poke_1v1_fighter.py  poke_fight_results.pkl
.github/workflows/: ci.yml
analysis/: team_gen_analysis.ipynb
configs/: 1v1.yaml  2v2.yaml  6v6.yaml
docker/: Dockerfile  entrypoint.sh
poke_stats/: delete_pngs.py  poke_1v1_fighter.py  poke_base_stats.pkl  poke_fight_results.pkl  poke_stats.ipynb  poke_stats.py  run.py
scripts/: teamer_builder.sh
src/P2Lab/: __main__.py
src/P2Lab/_compat/: __init__.py  typing.py
src/P2Lab/evaluator/: poke_env.py
src/P2Lab/genetic/: fitness.py
src/P2Lab/pokemon/: battle.py
src/P2Lab/stats/: team_recorder.py
src/P2Lab/teams/: builder.py  team.py
src/p2lab/: __init__.py  __main__.py  battle.py  gen_data.py  team.py
src/p2lab/_compat/: __init__.py  typing.py
src/p2lab/evaluator/: __init__.py  poke_env.py
src/p2lab/genetic/: __init__.py  fitness.py  genetic.py  matching.py  operations.py  utils.py
src/p2lab/poke_stats/: delete_pngs.py  poke_1v1_fighter.py  poke_base_stats.pkl  poke_stats.ipynb  poke_stats.py
src/p2lab/pokemon/: __init__.py  battle.py  battles.py  poke_factory.py  pokefactory.py  premade.py  team.py  teams.py
src/p2lab/stats/: team_recorder.py
src/p2lab/teams/: builder.py  gen1.py  gen_filter.py  pokemon_maker.py  team.py
tests/: conftest.py  test_battles.py  test_matching.py  test_package.py  test_pokedex.py  test_teams.py  test_workflow.py
